ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gotify
  namespace: gotify
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gotify.k8s.sohot.app`) # change to your domain
      kind: Rule
      services:
        - name: gotify
          port: 80
    - match: Host(`gotify.k8s.sohot.app`) # change to your domain
      kind: Rule
      services:
        - name: gotify
          port: 80
      middlewares:
        - name: default-headers
  tls: {} # change to your cert
